--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "lodash": "^4.17.21",
     "next": "^12.1.0",
+    "next-auth": "^4.22.0",
     "next-redux-wrapper": "^6.0.2",
     "rc-slider": "^9.3.1",
     "react": "^18.1.0",
