--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   ],
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "eslint-config-next": "^15.0.3",
     "lodash": "^4.17.21",
-    "next": "^12.1.0",
+    "next": "^15.0.3",
     "next-redux-wrapper": "^6.0.2",
     "rc-slider": "^9.3.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^6.8.2",
     "react-rater": "^5.1.1",
     "react-redux": "^7.2.1",
